fixed navicon js
and some layout issues

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -46,6 +46,7 @@ a {
 	margin: 15px 0;
 	border-left: $secondary 5px solid;
 	border-right: transparent 5px solid;
+	clear: both;
 }
 
 img {
@@ -72,7 +73,6 @@ $total-width: 100%;
 .wrapper {
 	max-width: 1000px;
 	margin: 0 auto;
-	padding-bottom: 50px;
 }
 
 header {
@@ -102,10 +102,11 @@ header {
 	}
 }
 
-.nav-toggle {
+#nav-toggle {
 	float: right;
 	display: block;
 	text-align: right;
+	margin-top: -5px;
 }
 
 nav.nav-collapse {
@@ -142,8 +143,8 @@ nav.nav-collapse {
 }
 
 .padded {
-	@include row(12);
-	padding: 3%;
+	//@include row(12);
+	padding: 4%;
 	@include break($d) {
 		padding: 0;
 	}
@@ -228,6 +229,59 @@ section {
 
 }
 
+footer {
+	overflow-x: hidden;
+	width: 100%;
+	padding-bottom: 50px;
+}
+
+address {
+	color: $secondary;
+	padding: 10px 10%;
+	span {
+		display: block;
+	}
+}
+
+#newsletter {
+	width: 100%;
+	@include row(12);
+
+	h2 {
+		text-indent:5px;
+		margin-bottom: 5px;
+	}
+}
+
+input {
+	box-shadow: 0;
+	background-color: #ddd;
+	border: 0;
+	border-radius: 0;
+}
+
+input[type="email"] {
+	@include column(9);
+	&:focus {
+		outline: 0;
+		box-shadow: inset 0 0 0 2px $primary;
+		padding-left: 1%;
+	}
+}
+
+$form-pad: 10px;
+
+input, button {
+	padding: $form-pad;
+}
+
+button[type="submit"] {
+	@include column(2);
+	background-color: $secondary;
+	color: $light;
+	text-align: center;
+	padding-top: $form-pad + 3px;
+}
 
 /* ::Import styles */
 /* ------------------------------------------------------------ */
